--- a/app/design/frontend/creo_mobile/default/template/checkout/onepage/review/item.phtml
+++ b/app/design/frontend/creo_mobile/default/template/checkout/onepage/review/item.phtml
@@ -31,12 +31,12 @@
         <dl class="item-options">
             <?php foreach ($_options as $_option) : ?>
             <?php $_formatedOptionValue = $this->getFormatedOptionValue($_option) ?>
-            <dt><?php echo $this->escapeHtml($_option['label']) ?></dt>
+            <dt><?php echo $this->__($this->escapeHtml($_option['label'])); ?>test</dt>
             <dd<?php if (isset($_formatedOptionValue['full_view'])): ?> class="truncated"<?php endif; ?>><?php echo $_formatedOptionValue['value'] ?>
                 <?php if (isset($_formatedOptionValue['full_view'])): ?>
                 <div class="truncated_full_value">
                     <dl class="item-options">
-                        <dt><?php echo $this->escapeHtml($_option['label']) ?></dt>
+                        <dt><?php echo $this->__($this->escapeHtml($_option['label'])); ?>new</dt>
                         <dd><?php echo $_formatedOptionValue['full_view'] ?></dd>
                     </dl>
                 </div>
