--- a/app/design/frontend/creo/default/template/checkout/cart.phtml
+++ b/app/design/frontend/creo/default/template/checkout/cart.phtml
@@ -145,7 +145,7 @@
           </tfoot>
           <tbody>
             <?php foreach($this->getItems() as $_item): ?>
-            <?php //echo $this->getItemHtml($_item) ?>
+            <?php echo $this->getItemHtml($_item) ?>
             <?php endforeach ?>
           </tbody>
         </table>
