--- a/skin/frontend/creo/default/style-ar.css
+++ b/skin/frontend/creo/default/style-ar.css
@@ -19,7 +19,7 @@ footer#footer{direction:rtl;}
 #nav ol > li,#nav .featured-items .featured-products li,#footer .column,#footer .social li,.price-area .price-info,
 .faq-area.return-area .step-col li,.signup-form .row .col,.form-holder .form-frame,.nav li, form li,.checkoutShippingMethod ul li input,
 .checkoutShippingMethod ul li label,.product-detail .price-area .price,#bill_form label, #ship_form label,.tabset.tabset1 li,
-#nav .links-area .sorting-items{float:right;}
+#nav .links-area .sorting-items,.product-swatches-container .has-swatches li{float:right;}
 #nav .links-area .sorting-items{margin-left:15px;text-align:right;}
 #footer .column.column1{width:auto;}
 .product-detail .btn-holder button:first-child .span1{margin-left:0;margin-right:10px;}
@@ -32,7 +32,7 @@ border-width: 30px 6px 0 0px;left:inherit;right:100%;}
 .toolbar .sort-by select, .category_top_filters .sort-by select{font-size:12px;}
 #nav .links-area .links,.faq-area .faq-frame.terms .openeer-holder .question,
 .shipping-methods h3, #last_most_view_title > h3,.faq-area h3,.tab-content2 .dark-heading,.three-column h3,
-#savePopup .form-horizontal .form-group p,.modal-holder .login-form label{text-align:right;}
+#savePopup .form-horizontal .form-group p,.modal-holder .login-form label,.attributeItem{text-align:right;}
 .order-details-table th:first-child{text-align:center;}
 .product-detail .price-area .availability{float:left;}
 .catalog-product-view .text-area .qty-area label{display:block;}
@@ -59,6 +59,8 @@ white-space:nowrap;}
 .icon-angle-right:before{content: '\e80f';}
 .design_categories_attributes ul li{margin:0 0% 1% 1%;}
 .design_categories_attributes ul li:nth-child(4n){margin-left:0;}
+a.sizeguide_link{top:110px;}
+
 
 @media only screen and (max-width: 1199px){
 
