--- a/skin/frontend/creo/default/custom.css
+++ b/skin/frontend/creo/default/custom.css
@@ -714,7 +714,7 @@ text-decoration: none;
 .checkout-heading { border: none !important;}
 .onestepcheckout-index-index form select { position: static;}
 #checkout-payment-method-load .paymentradiobutton, #checkout-payment-method-load .paymentradiobuttonlabel{
-float: left; margin:0 5px 0 0;}
+float: left; /*margin:0 5px 0 0;*/}
 .option-alternate:nth-last-child(2) {display: none;}
 .checkout-cart-index .checkout_applyCoupon { display: none;}
 #coupon-discount { float: left; width:100%;}
