--- a/app/design/frontend/creo_mobile/default/template/newsletter/subscribe.phtml
+++ b/app/design/frontend/creo_mobile/default/template/newsletter/subscribe.phtml
@@ -131,3 +131,13 @@ $visitAttempt = $_SERVER['HTTP_REFERER'];
         <?php Mage::getModel('core/cookie')->set('popup-shown', 'true', 1 * 365 * 24 * 60 * 60 , '/'); ?>
     }
     </script>
+
+    <?php 
+if($visitCount>2){
+  setcookie('newsletter', 'hide-news-lette',time() + (60 * 10),'/');
+?>
+<script type="text/javascript">jQuery('.modal_newsletter').modal('hide');</script>
+<?php Mage::getModel('core/cookie')->set('popup-shown', 'true', 1 * 365 * 24 * 60 * 60 , '/'); ?>
+<?php
+}
+    ?>
