--- a/skin/frontend/creo/default/style-ar.css
+++ b/skin/frontend/creo/default/style-ar.css
@@ -19,7 +19,7 @@ footer#footer{direction:rtl;}
 #nav ol > li,#nav .featured-items .featured-products li,#footer .column,#footer .social li,.price-area .price-info,
 .faq-area.return-area .step-col li,.signup-form .row .col,.form-holder .form-frame,.nav li, form li,.checkoutShippingMethod ul li input,
 .checkoutShippingMethod ul li label,.product-detail .price-area .price,#bill_form label, #ship_form label,.tabset.tabset1 li,
-#nav .links-area .sorting-items,.product-swatches-container .has-swatches li{float:right;}
+#nav .links-area .sorting-items,.product-swatches-container .has-swatches li,.cart-top-area h2{float:right;}
 #nav .links-area .sorting-items{margin-left:15px;text-align:right;}
 #footer .column.column1{width:auto;}
 .product-detail .btn-holder button:first-child .span1{margin-left:0;margin-right:10px;}
@@ -60,6 +60,7 @@ white-space:nowrap;}
 .design_categories_attributes ul li{margin:0 0% 1% 1%;}
 .design_categories_attributes ul li:nth-child(4n){margin-left:0;}
 a.sizeguide_link{top:110px;}
+.sales-order-view .cart-table-area th:before, .cart-table-area td:before{left:inherit;right:12px;border-left:0;border-right:2px solid #f3f3f3;}
 
 
 @media only screen and (max-width: 1199px){
