--- a/app/design/frontend/creo_mobile/default/template/page/html/topmenu/customcategories.phtml
+++ b/app/design/frontend/creo_mobile/default/template/page/html/topmenu/customcategories.phtml
@@ -9,6 +9,66 @@
       </div>
   
     </div> -->
+
+
+
+
+
+<li <?php if (in_array("clothing",$parent_cat_array) || $_GET['id']==3) {
+    echo'class="active"';
+} ?>> <a href="javascript:void(0)"><?php echo $this->__('CLOTHING'); ?></a>
+    <div class="drop">
+    <div class="links-area">
+      <div class="links-frame">
+          <ul class="sorting-items">
+          <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/trending?id=3" ?>"><?php echo $this->__('Trending'); ?></a></li>
+          <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/bestseller?id=3" ?>"><?php echo $this->__('Best Seller'); ?></a></li>
+          <li><a href="<?php echo Mage::getBaseUrl() . "sellers/index/newcollection?id=3" ?>"><?php echo $this->__('NEW'); ?></a></li>
+      </ul>
+
+
+ <ul class="links">
+ <li> <strong><?php echo $this->__('Men'); ?> </strong> </li>
+<?php
+
+$children_category = Mage::getModel('catalog/category')->load('57')->getChildrenCategories();
+
+$m=0;
+foreach ($children_category as $category):
+    $_category = Mage::getModel('catalog/category')->load($category->getId());
+    echo '<li><a href="' . $_category->getUrl() . '"> ' . $this->__($_category->getName()) . '</a></li>';
+    if($m==0){
+      echo '<li><a href="' . Mage::getBaseUrl() . 'clothing/men/tshirt.html?styles=22">'.$this->__("Tank Top").'</a></li>';
+    }
+    $m++;
+endforeach;
+?>
+                </ul>
+   <ul class="links">
+   <li> <strong><?php echo $this->__('Women'); ?> </strong> </li>
+<?php
+$children_category = Mage::getModel('catalog/category')->load('58')->getChildrenCategories();
+$w=0;
+foreach ($children_category as $category):
+    $_category = Mage::getModel('catalog/category')->load($category->getId());
+    echo '<li><a href="' . $_category->getUrl() . '"> ' . $this->__($_category->getName()) . '</a></li>';
+    if($w==0){
+      echo '<li><a href="' . Mage::getBaseUrl() . 'clothing/women/tshirt.html?styles=22">'.$this->__("Tank Top").'</a></li>';
+    }
+    $w++;
+endforeach;
+?>
+                </ul>
+            </div>
+        </div>
+        
+    </div>
+</li>
+
+
+
+
+
 <?php
         $_helper = Mage::helper('catalog/category');
         $_categories = $_helper->getStoreCategories();
