--- a/app/design/frontend/creo/default/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/creo/default/template/customer/form/forgotpassword.phtml
@@ -45,7 +45,7 @@
        
                 <label for="email_address" class="required"><span class="red marg-right">*</span><?php echo $this->__('Email Address') ?></label>
                 
-                    <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" alt="email" id="email_address" class="input-text required-entry validate-email email" value="<?php echo $this->escapeHtml($this->getEmailValue()) ?>" />
+                    <input type="text" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" alt="email" id="email_address" class="input-text required-entry validate-email email" value="<?php echo $this->escapeHtml($this->getEmailValue()) ?>" />
                
             
             <?php echo $this->getChildHtml('form.additional.info'); ?>
