--- a/skin/frontend/creo/default/style-ar.css
+++ b/skin/frontend/creo/default/style-ar.css
@@ -33,7 +33,7 @@ border-width: 30px 6px 0 0px;left:inherit;right:100%;}
 #nav .links-area .links,.faq-area .faq-frame.terms .openeer-holder .question,
 .shipping-methods h3, #last_most_view_title > h3,.faq-area h3,.tab-content2 .dark-heading,.three-column h3,
 #savePopup .form-horizontal .form-group p,.modal-holder .login-form label,.attributeItem,.jconfirm .jconfirm-box div.title,
-.jconfirm .jconfirm-box div.content{text-align:right;}
+.jconfirm .jconfirm-box div.content,input,select,textarea,input[type="text"], input[type="password"], input.email{text-align:right;}
 .order-details-table th:first-child{text-align:center;}
 .product-detail .price-area .availability{float:left;}
 .catalog-product-view .text-area .qty-area label{display:block;}
