nesletter and top menu changes

--- a/app/design/frontend/creo/default/template/newsletter/subscribe.phtml
+++ b/app/design/frontend/creo/default/template/newsletter/subscribe.phtml
@@ -101,7 +101,7 @@ $visitAttempt = $_SERVER['HTTP_REFERER'];
     </style>
     <?php */ ?>
       </div>
-    <button type="button" class="close closebtn" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><?php echo $this->__('SKIP'); ?><?php echo $visitCount;?></span></button>
+    <button type="button" class="close closebtn" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><?php echo $this->__('SKIP'); ?></span></button>
     </div>
   </div>
 </div>
