--- a/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
+++ b/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
@@ -151,7 +151,8 @@ echo $text;
 <li><a href="<?php echo  Mage::getModel('catalog/category')->load(47)->getUrl(); ?>">CREATE</a></li><?php */ ?>
 <?php
 $ccurrentUrl = Mage::helper('core/url')->getCurrentUrl();
-$customId = '255';
+//$customId = '255';
+$customId = '259';
 $parent_cat_array = array();
 if(Mage::app()->getFrontController()->getRequest()->getControllerName() == "category"){
 $parentId = Mage::registry('current_category')->getParentId();
@@ -340,7 +341,7 @@ endforeach;
 </li>
 <li <?php if(strstr($ccurrentUrl,"custom")) {
 echo'class="active"';
-} ?>> <a href="<?php echo Mage::getBaseUrl() . "clothing.html?universal_categories=".$customId."&custom=1" ?>"><?php echo $this->__('The Crazy Ones'); ?></a>
+} ?>> <a href="<?php echo Mage::getBaseUrl() . "clothing.html?universal_categories=".$customId."&custom=1" ?>"><?php echo $this->__('Brands'); ?></a>
 </li>
 <!-- Menu active class added-->
 <li <?php if(strstr($ccurrentUrl,"collections")) {
