creo ar css and text domain fixes

--- a/app/design/frontend/creo/default/template/wishlist/item/column/cart.phtml
+++ b/app/design/frontend/creo/default/template/wishlist/item/column/cart.phtml
@@ -53,7 +53,7 @@ function decrementQty(fid){
 
 </script>
   <div class="cart-area">
-    <h3>ADD TO CART</h3>
+    <h3><?php echo $this->__('ADD TO CART'); ?></h3>
     <span class="price"><?php echo $this->getPriceHtml($product, empty($options));?></span>
 
 <div class="bottom-area">
