--- a/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
+++ b/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
@@ -351,7 +351,7 @@ echo'class="active"';
 echo'class="active"';
 } ?>> <?php // echo Mage::getBaseUrl() . "collections/index/categories" ?> <a><?php echo $this->__('COLLECTIONS'); ?></a>
 <div class="drop">
-<div class="links-area">
+<div class="links-area">x
 <div class="links-frame">
 <ul class="links">
 <li> <a href="<?php echo Mage::getBaseUrl() . "collections/index/men" ?>"><strong> <?php echo $this->__('Men'); ?> </strong> </a></li>
