text domain js fix

--- a/app/design/frontend/creo/default/template/page/html/head.phtml
+++ b/app/design/frontend/creo/default/template/page/html/head.phtml
@@ -65,6 +65,7 @@ errors_arr['validate-cap-text-box1'] = "<?php echo $this->__('Please enter text 
 errors_arr['validate-cap-character-box1'] = "<?php echo $this->__('Please enter only one character to box 1'); ?>";
 errors_arr['validate-cap-text-box2'] = "<?php echo $this->__('Please enter text to box 2'); ?>";
 errors_arr['validate-cap-character-box2'] = "<?php echo $this->__('Please enter only one character to box 2'); ?>";
+errors_arr['validate-okay'] ="<?php echo $this->__('okay'); ?>";
 </script>
 <?php echo $this->getCssJsHtml() ?>
 <?php echo $this->getChildHtml() ?>
