--- a/skin/frontend/creo/default/style-ar.css
+++ b/skin/frontend/creo/default/style-ar.css
@@ -33,9 +33,10 @@ border-width: 30px 6px 0 0px;left:inherit;right:100%;}
 #nav .links-area .links,.faq-area .faq-frame.terms .openeer-holder .question,
 .shipping-methods h3, #last_most_view_title > h3,.faq-area h3,.tab-content2 .dark-heading,.three-column h3,
 #savePopup .form-horizontal .form-group p,.modal-holder .login-form label,.attributeItem,.jconfirm .jconfirm-box div.title,
-.jconfirm .jconfirm-box div.content,input,select,textarea,input[type="text"], input[type="password"], input.email{text-align:right;}
+.jconfirm .jconfirm-box div.content,input,select,textarea,input[type="text"], input[type="password"], input.email,.cart-table-area dl dt,
+.cart-table-area dl dd{text-align:right;}
 .order-details-table th:first-child{text-align:center;}
-.product-detail .price-area .availability{float:left;}
+.product-detail .price-area .availability,.cart-top-area .btn-holder{float:left;}
 .catalog-product-view .text-area .qty-area label{display:block;}
 #last_most_view_box_sub,.tshirtsize,.form-holder .btn-holder button:first-child,.tab-links,.cart-top-area{direction:ltr;}
 .faq-area.return-area .step-col li,.form-holder .form-frame{margin: 0 0% 0 2%;}
