--- a/app/design/frontend/creo/default/template/customer/wishlist.phtml
+++ b/app/design/frontend/creo/default/template/customer/wishlist.phtml
@@ -52,7 +52,7 @@ Progos
             <tr>
                 <td>
                     <input type="hidden" value="1" name="wishlist[<?php echo $item->getItemId() ?>]" />
-                    <a href="<?php echo $this->getUrl('catalog/product/view/id/'.$item->getProduct()->getId()) ?>"><?php echo $this->escapeHtml($item->getProduct()->getName()) ?></a>
+                    <a href="<?php echo $this->getUrl('catalog/product/view/id/'.$item->getProduct()->getId()) ?>"><?php echo $this->__($this->escapeHtml($item->getProduct()->getName())); ?></a>
                 </td>
                 <td><?php echo $item->getStatus() ?></td>
                 <td><input type="checkbox" value="1" name="to_cart[<?php echo $item->getItemId() ?>]" class="checkbox" /></td>
